--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -14,7 +14,7 @@
     justify-content: space-between;
 
     .question-tags {
-      color: grey;
+      color: gray;
 
       margin-left: 0.3rem;
       @media (width >= 600px) {
@@ -89,7 +89,7 @@
         color: gray;
 
         & ~ .bx {
-          color: grey;
+          color: gray;
         }
       }
 
